fix(nested rows): fixed border color and align

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
@@ -428,7 +428,7 @@
     );
     width: 1px;
     height: var(--#{$block-class}--indicator-height);
-    border-left: 1px solid $background-brand;
+    border-left: 1px solid $active-ui;
     content: '';
   }
 }
