--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_useNestedRows.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_useNestedRows.scss
@@ -50,3 +50,21 @@
   background-color: $border-subtle;
   content: '';
 }
+
+.#{$block-class}
+  tr.#{$block-class}__carbon-nested-row{
+  td:first-child:empty, .#{$block-class}__expandable-row-cell{
+      border-bottom: none;
+  }
+}
+
+.#{$carbon-prefix}--data-table td.#{$block-class}__expandable-row-cell{
+  padding-left: 0;
+}
+
+.#{$block-class}__carbon-row-expanded{
+  .#{$block-class}__expandable-row-cell{
+    border-bottom: none;
+  }
+}
+
